--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ display: none;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;    
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 .fundo01{
